# ifield

./: .gitignore  pyproject.toml  setup.py
src/: run_ifield.py
src/ifield/: game_version.py  solver.py  solvers.pyx
